SAKIII-3047 Fix spacing of elements system wide, fix add goodies dialog styling

--- a/dev/css/sakai/sakai.explore.css
+++ b/dev/css/sakai/sakai.explore.css
@@ -1,6 +1,6 @@
 .s3d-page-header{padding:0px;height:auto;width:960px;-moz-box-shadow:0 -5px 9px 6px #555555;-webkit-box-shadow:0 -5px 9px 6px #555555;box-shadow:0 -5px 9px 6px #555555;}
 #explore_navigation{height:40px;}
 #explore_navigation .s3d-contentpage-title{border-bottom:none;}
-#explore_content {padding: 12px;}
-#explore_content_first_column, .explore_content_first_column {width:75%;float:left;}
-#explore_content_second_column {float:right;width:23%;margin-top:12px;}
+#explore_content {padding:20px;}
+#explore_content_first_column, .explore_content_first_column {width:728px;margin-right:25px;float:left;}
+#explore_content_second_column {float:right;width:167px;margin:12px 0 0;}
